wall-clock: Replace ratio with colon on non-UTF-8 locales

Some of our translations use the ratio symbol which isn't convertible
to non-UTF-8 locale encodings which causes g_date_time_format() to
fail. Work around it by replacing the ratio symbol with a plain
colon.

https://bugzilla.gnome.org/show_bug.cgi?id=722664